objects/DMAPP__DM_Collaboration_Map__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing the Insight Maps associated with Opportunities</description>
    <fields>
        <fullName>DMAPP__DM_Opportunity_Extra__c</fullName>
        <label>DM Opportunity Extra</label>
        <referenceTo>DMAPP__DM_Opportunity_Extra__c</referenceTo>
        <relationshipName>DM_Collaboration_Maps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_Smart_Business_Map__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set this reference points at the smart map which was used to bootstrap this map.</description>
        <inlineHelpText>If set this reference points at the smart map which was used to bootstrap this map.</inlineHelpText>
        <label>Insight Smart Business Map</label>
        <referenceTo>DMAPP__Insight_Smart_Business_Map__c</referenceTo>
        <relationshipLabel>Insight Maps</relationshipLabel>
        <relationshipName>Insight_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <label>Insight Map</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Insight Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insight Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>